seperated layers into components

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,3 +1,9 @@
-<div class="banner">
-  <p>Welcome to the future of web design.</p>
-</div>
+<body>
+  <div class="hero-image">
+    <img src="assets/design-hero-image.jpg" alt="background-image" />
+  </div>
+  <div class="hero-text">
+    <h1 class="company-heading" style="font: size 50;">{{ title }}</h1>
+    <p>Welcome to the future of web design.</p>
+  </div>
+</body>
