--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -4,3 +4,32 @@
   padding: 0;
   width: 15em;
 }
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.hero-image {
+  background-color: #221c1c;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  opacity: 0.5;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+}
+
+.company-heading {
+  font-family: "Courier New", Courier, monospace;
+}
+
+img {
+  size: 100px;
+}
