--- a/src/app/dropdown-layer/dropdown-layer.component.html
+++ b/src/app/dropdown-layer/dropdown-layer.component.html
@@ -1,7 +1,4 @@
 <body>
-  <div class="dropdown-layer">
-    <div>
-      <h1>Select a location</h1>
-    </div>
-  </div>
+  <div class="parallax"></div>
+  <div class="hero-text"></div>
 </body>
