--- a/src/app/dropdown-layer/dropdown-layer.component.css
+++ b/src/app/dropdown-layer/dropdown-layer.component.css
@@ -1,9 +1,21 @@
-body {
-  background-color: aqua;
+.parallax {
+  background-image: url(https://images.unsplash.com/photo-1579006402997-d392fcbd04cf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1325&q=80);
+  /* <img src="assets/design-hero-image.jpg" alt="background-image" /> */
+  /* Set a specific height */
   height: 400px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.dropdown-layer {
-  padding-top: 50px;
+.hero-text {
   text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
 }
