added dropdown component

--- a/src/app/dropdown-layer/dropdown-layer.component.html
+++ b/src/app/dropdown-layer/dropdown-layer.component.html
@@ -1,4 +1,7 @@
 <body>
-  <div class="parallax"></div>
-  <div class="hero-text"></div>
+  <div class="parallax">
+    <div class="hero-text">
+      <h1>Select a location</h1>
+    </div>
+  </div>
 </body>
