--- a/src/app/dropdown-layer/dropdown-layer.component.css
+++ b/src/app/dropdown-layer/dropdown-layer.component.css
@@ -9,13 +9,14 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  opacity: 0.5;
 }
 
 .hero-text {
   text-align: center;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: black;
+  color: white;
 }
