--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <!-- nav -->
-
-<a routerLink="/">Home</a>
-<a routerLink="/dashboard">Dashboard</a>
+<ul>
+  <li><a routerLink="/dashboard">Dashboard</a></li>
+  <li><a class="active" routerLink="/">Home</a></li>
+</ul>
