added data binding to dashboard

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -3,5 +3,6 @@
   <div class="hero-text">
     <h1 class="company-heading" style="font: size 50;">{{ title }}</h1>
     <p>Welcome to the future of web design.</p>
+    {{ name }}
   </div>
 </body>
